tests/specs/node/byonm_phantom_dep_res_failure/bad_import.out
error: [ERR_MODULE_NOT_FOUND] Cannot find module 'file:///[WILDLINE]/node_modules/package/index.js' imported from 'file:///[WILDLINE]/bad_import.ts'
    at file:///[WILDLINE]/bad_import.ts:1:16
