tests/specs/node/byonm_phantom_dep_res_failure/bad_import.ts
import hi from "package";

hi();
